# fastapi-todo

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 8844678b9fa1_.py
src/app/: crud.py  db.py  main.py  models.py  schemas.py
src/app/routers/: todos.py
tests/: test_todos.py
