[tool.poetry]
name = "tests-assignment"
version = "0.1.0"
description = ""
authors = ["Kostya Pashko <pashkokostya@gmail.com>"]
readme = "README.md"
packages = [{include = "tests_assignment"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.0"
sqlalchemy = "^1.4.46"
uvicorn = "^0.20.0"
alembic = "^1.9.1"
python-dotenv = "^0.21.0"
pytest = "^7.2.0"
httpx = "^0.23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
